[fix] header spacing on different devices

--- a/css/default.scss
+++ b/css/default.scss
@@ -6,7 +6,7 @@ body {
   grid-template-areas:
     "header header header header"
     ". article article .";
-  grid-template-rows: 20% 1fr;
+  grid-template-rows: 0.5fr auto;
 }
 
 header {
@@ -93,6 +93,12 @@ aside {
 
 .highlighter-rouge {
   max-width: calc(100vw - 50px);
+}
+
+@media (min-width: 768px) {
+  body {
+    grid-template-rows: 0.1fr auto;
+  }
 }
 
 @media (min-width: 1025px) {
